# brain_system

./: .gitignore  README.md
.github/workflows/: README.md  nightly.yml  release-brain-system.yml  release-sandbox.yml
app/memory/audit/: agentctl_audit_2026-02-28.jsonl  agentctl_audit_2026-03-01.jsonl
brain/: .gitignore  .mcp.json  ARCH_LAYOUT.md  GEMINI.md  INIT.md  INIT.yaml  INIT.yaml.bak.20260315  README.md  USAGE.md  brain  usermanual.md
brain/.claude/: settings.local.json
brain/.claude/hooks/: pre_tool_use  session_end
brain/.codex/: config.toml
brain/agents/agent-brain_codex_foos/: .mcp.json  CLAUDE.md
brain/agents/agent-brain_dev/: .mcp.json  CLAUDE.md
brain/agents/agent-brain_devops/: .mcp.json  CLAUDE.md
brain/agents/agent-brain_frontdesk/: .mcp.json  CLAUDE.md
brain/agents/agent-brain_manager/: .mcp.json  CLAUDE.md
brain/agents/agent-brain_nginx_config/: .mcp.json  CLAUDE.md
brain/agents/agent-brain_pmo/: .mcp.json  CLAUDE.md
brain/agents/agent-brain_workflow_monitor/: .mcp.json  CLAUDE.md
brain/agents/agent_brain_dash-001_host_auditor/: .mcp.json  CLAUDE.md
brain/agents/tmp-agent-doubao/: .mcp.json  CLAUDE.md
brain/agents/tmp-agent_sonnet/: .mcp.json  CLAUDE.md
brain/backup/agentctl_config_before_20260301_204317/: MIGRATION.md  agents_registry.yaml  agents_registry.yaml.bak
brain/backup/infrastructure/: README.md
brain/base/: index.yaml  project.yaml
brain/base/config/: sandbox.global.yaml
brain/base/evolution/: cycle.yaml
brain/base/sandbox/: PROJECT_EXTENSION.md
brain/base/scripts/: publish_base.sh
brain/infrastructure/config/: timers.yaml
brain/infrastructure/data/: shared_storage.py
brain/infrastructure/deploy/: deploy.sh  deploy.yaml
brain/inputs/: README.md
brain/secrets/: .gitignore  README.md  index.yaml
brain/tmp_ipc/: brain_ipc.sock
groups/brain/projects/base/platform/docker/: pyproject.toml
(+1620 files in other folders)
