[tool.poetry]
name = "brain-platform"
version = "2.1.0"
description = "Brain System Platform Dependencies"
authors = ["Brain Team <brain@xkbrain.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.12"
annotated-doc = "0.0.4"
annotated-types = "0.7.0"
anyio = "4.12.1"
apscheduler = "3.11.2"
asyncpg = "0.31.0"
attrs = "25.4.0"
certifi = "2026.1.4"
cffi = "2.0.0"
charset-normalizer = "3.4.4"
click = "8.3.1"
colorama = "0.4.6"
conan = "2.25.2"
croniter = "6.0.0"
cryptography = "46.0.5"
distro = "1.9.0"
fastapi = "0.128.0"
fasteners = "0.20"
greenlet = "3.3.1"
h11 = "0.16.0"
httpcore = "1.0.9"
httpx = "0.28.1"
httpx-sse = "0.4.3"
idna = "3.11"
iniconfig = "2.3.0"
jinja2 = "3.1.6"
jiter = "0.12.0"
jsonschema = "4.26.0"
jsonschema-specifications = "2025.9.1"
markupsafe = "3.0.3"
mcp = "1.26.0"
numpy = "2.4.2"
openai = "2.15.0"
packaging = "26.0"
patch-ng = "1.18.1"
pgvector = "0.4.2"
pluggy = "1.6.0"
pycparser = "3.0"
pydantic = "2.12.5"
pydantic-settings = "2.13.0"
pydantic-core = "2.41.5"
pygments = "2.19.2"
pyjwt = "2.12.0"
pytest = "9.0.2"
pytest-asyncio = "1.3.0"
python-dateutil = "2.9.0.post0"
python-dotenv = "1.2.1"
python-multipart = "0.0.22"
pytz = "2025.2"
pyyaml = "6.0.3"
referencing = "0.37.0"
requests = "2.32.5"
rpds-py = "0.30.0"
sh = "2.2.2"
six = "1.17.0"
sniffio = "1.3.1"
sqlalchemy = "2.0.46"
sse-starlette = "3.2.0"
starlette = "0.50.0"
tqdm = "4.67.1"
transitions = "0.9.3"
typing-inspection = "0.4.2"
typing-extensions = "4.15.0"
tzlocal = "5.3.1"
urllib3 = "2.6.3"
uvicorn = "0.40.0"
watchdog = "6.0.0"
websockets = "16.0"

[tool.poetry.group.dev.dependencies]
pytest = "9.0.2"
pytest-asyncio = "1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
